syntax = "proto3";

option go_package = "./student";

service StudentService {
  rpc GetStudentDetails(StudentRequest) returns (StudentResponse);
}

message StudentRequest {
  int32 id = 1;
}

message StudentResponse {
  string name = 1;
  int32 age = 2;
  string subject = 3;
}
